--- a/webapp-bbdd-crud-completo-tarea10/pom.xml
+++ b/webapp-bbdd-crud-completo-tarea10/pom.xml
@@ -29,6 +29,14 @@
             <version>2.12.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.17.0</version>
+            <type>pom</type>
+        </dependency>
+
+
     </dependencies>
 
     <build>
