Sección 51: Jakarta EE 9: API Servlet - Layout y CSS Bootstrap, terminada. - Se agrega bootstrap para dar estilos a la app, - Se crea template de header y footer para poder reutilizar codigo

--- a/webapp-session-bootstrap/pom.xml
+++ b/webapp-session-bootstrap/pom.xml
@@ -46,7 +46,7 @@
                 <configuration>
                     <url>http://localhost:8080/manager/text</url>
                     <username>admin</username>
-                    <password>12345</password>
+                    <password>admin</password>
                 </configuration>
             </plugin>
             <plugin>
